script/aws/eks/signalhub-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: signalhub-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: signalhub
  template:
    metadata:
      labels:
        app.kubernetes.io/name: signalhub
    spec:
      serviceAccountName: signalhub-serviceaccount
      containers:
        - name: signalhub-container
          image: ghcr.io/francarl77/signalhub:latest
          ports:
            - containerPort: 8080
      imagePullSecrets:
        - name: ghcr-login-secret
