script/aws/eks/signalhub-nlb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: signalhub-nlb-service
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: internal
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: instance
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: signalhub
