script/aws/eks/signalhub-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: signalhub-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/load-balancer-name: signalhub-lb
    alb.ingress.kubernetes.io/target-type: ip
  labels:
    app: signalhub
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: signalhub-service
                port:
                  number: 8080
